Fix alignment of meditation title.

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ footer {
   padding: 1em;
 }
 
+.med-title {
+  margin-top: 0px;
+}
+
 #feedback {
   margin-top: 1em;
   display: none;
